--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://svn.bcgsc.ca/bitbucket/scm/vdb/knowledgebase_parser.git"
+    "url": "ssh://git@svn.bcgsc.ca:7999/vdb/knowledgebase_parser.git"
   },
   "author": "",
   "license": "ISC",
