--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knowledgebase-parser",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A package for parsing and recreating variant notation",
   "main": "./app/index.js",
   "directories": {
@@ -17,6 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "json-cycle": "^1.3.0"
   },
   "devDependencies": {
