--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.2",
   "description": "A package for parsing and recreating variant notation",
   "main": "./app/index.js",
+  "private": true,
   "directories": {
     "test": "test"
   },
