--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "knowledgebase-parser",
-  "version": "0.4.0",
+  "name": "@bcgsc/knowledgebase-parser",
+  "version": "0.4.1",
   "description": "A package for parsing and recreating variant notation",
   "main": "./app/index.js",
   "directories": {
