--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bcgsc/knowledgebase-parser",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "A package for parsing and recreating variant notation",
   "main": "./app/index.js",
   "directories": {
@@ -13,7 +13,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://svn.bcgsc.ca/bitbucket/projects/VDB/repos/knowledgebase_parser"
+    "url": "https://svn.bcgsc.ca/bitbucket/projects/dat/repos/knowledgebase_parser"
+  },
+  "bugs": {
+    "email": "graphkb@bcgsc.ca"
   },
   "author": "",
   "license": "ISC",
