--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
     "json-cycle": "^1.3.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
     "docdash": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
-    "jsdoc": "^3.6.2",
-    "mocha": "^5.2.0",
-    "mocha-bamboo-reporter": "^1.1.1",
-    "mocha-multi-reporters": "^1.1.7",
-    "nyc": "^14.1.1"
+    "jest": "^25.1.0",
+    "jest-bamboo-formatter": "^1.0.1",
+    "jest-circus": "^25.1.0",
+    "jest-environment-node": "^25.1.0",
+    "jest-junit": "^10.0.0",
+    "jsdoc": "^3.6.2"
   }
 }
