--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@bcgsc/knowledgebase-parser",
   "version": "0.6.0",
   "description": "A package for parsing and recreating variant notation",
-  "main": "./app/index.js",
+  "main": "./src/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha -R mocha-multi-reporters --reporter-options configFile=config/coverage.json --recursive test",
+    "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit",
     "jsdoc": "jsdoc -r app -R README.md -d jsdoc --package package.json -c config/jsdoc.config.js",
     "version": "echo $npm_package_version"
   },
