Fix linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,7 @@
         ],
         "no-mixed-spaces-and-tabs": "error",
         "no-multi-assign": "off",
+        "no-new": "off",
         "no-param-reassign": "warn",
         "no-plusplus": [
             "error",
