--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit",
-    "jsdoc": "jsdoc -r app -R README.md -d jsdoc --package package.json -c config/jsdoc.config.js",
-    "version": "echo $npm_package_version"
+    "jsdoc": "jsdoc -r src -R README.md -d jsdoc -c config/jsdoc.config.js"
   },
   "repository": {
     "type": "git",
