--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "email": "graphkb@bcgsc.ca"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "json-cycle": "^1.3.0"
   },
