--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -29,11 +29,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           files: coverage/junit.xml/junit.xml
-      - name: Upload coverage
-        uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v1
         with:
           name: coverage
-        uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@v1
         with:
           yml: codecov.yml
           token: ${{ secrets.CODECOV_TOKEN }}
