--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -17,7 +17,7 @@ jobs:
         if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: coverage/junit.xml/junit.xml
+          files: coverage/junit.xml
       - uses: codecov/codecov-action@v1
         with:
           yml: codecov.yml
