--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit",
-    "jsdoc": "jsdoc -r src -R README.md -d jsdoc -c config/jsdoc.config.js"
+    "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,6 @@
     "json-cycle": "^1.3.0"
   },
   "devDependencies": {
-    "docdash": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
@@ -35,7 +33,6 @@
     "jest-bamboo-formatter": "^1.0.1",
     "jest-circus": "^25.1.0",
     "jest-environment-node": "^25.1.0",
-    "jest-junit": "^10.0.0",
-    "jsdoc": "^3.6.3"
+    "jest-junit": "^10.0.0"
   }
 }
