--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "@bcgsc-pori/graphkb-parser",
   "version": "1.1.3",
   "description": "A package for parsing and recreating HGVS-like variant notation used in GraphKB",
-  "main": "./src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit"
+    "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
