--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^27.3.1",
     "jest-circus": "^25.1.0",
     "jest-environment-node": "^25.1.0",
-    "jest-junit": "^13.0.0"
+    "jest-junit": "^13.0.0",
+    "typescript": "^4.5.5"
   }
 }
