--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "NODE_ENV=test jest --config config/jest.config.js --detectOpenHandles --forceExit",
     "build": "tsc",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint src test -c .eslintrc.json"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,14 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jest": "^23.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
@@ -39,6 +44,7 @@
     "jest-circus": "^25.1.0",
     "jest-environment-node": "^25.1.0",
     "jest-junit": "^13.0.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
 }
